# aws_utils

./: .gitignore  .pycodestyle  Makefile  cli.py  config.yaml  docker-compose.yml  mypy.ini  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
config/: configuration.py
src/aws_utils/: __init__.py  configuration.py  s3_utils.py  sqs_utils.py
tests/: conftest.py  test_cli.py
tests/integration/test_aws_utils/: test_integration_s3_utils.py  test_integration_utils.py  test_s3_utils.py  test_sqs_utils.py
tests/test_aws_utils/: test_configuration.py  test_s3_utils.py  test_sqs_utils.py
tests/unit/test_aws_utils/: test_sqs_utils.py
utils/: s3_utils.py  sqs_utils.py
