[metadata]
name = aws-utils-cli
version = 0.1.0
description = CLI para facilitar operações com AWS SQS e S3
long_description = file: README.md
long_description_content_type = text/markdown
author = Seu Nome
author_email = seu@email.com
license = MIT
url = https://github.com/greijal/aws_utils
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.8
install_requires =
    boto3>=1.26.0
    pyyaml>=6.0.1
    questionary
    colorama

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    aws-utils-cli = cli:main